--- a/styles/header.css
+++ b/styles/header.css
@@ -3,23 +3,64 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
 }
 
-.cabecalho__menu-hamburguer{
+.cabecalho__menu-hamburguer {
     width: 48px;
     height: 48px;
     background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
     background-position: center;
-    display: inline-block; 
+    display: inline-block;
 }
 
 .container__imagem {
     padding: 0.1em;
 }
 
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+.container__botao {
+    display: none;
+}
+
+.container__imagem::-moz-selection{
+    background: var(--cor-gradiente);
+}
+
+.container__botao:checked~.lista-menu {
+    display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--cor-branco);
+}
+
+.lista-menu__titulo {
+    color: var(--cor-titulo);
+    font-weight: 700;
+}
+
+.lista-menu__item {}
+
+.lista-menu__link {
+    background: var(--cor-gradiente);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: 400;
+    text-transform: uppercase;
+}
