--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import url('./header.css');
 
 :root{
@@ -25,5 +25,8 @@
 
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--Fonte-padrao);
+    font-size: 16px;
+    font-weight: 400;
 }
 
