--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,32 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import url('./header.css');
+@import url('./banner.css');
 
-:root{
+:root {
     --cor-de-fundo: #EBECEE;
     --cor-gradiente: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --cor-titulo: #EB9B00;
     --cor-subtitulo: #002F52;
     --cor-branco: #FFFFFF;
-    --cor-alternativo:#C4C4C4;
+    --cor-alternativo: #C4C4C4;
     --Fonte-padrao: 'Poppins', sans-serif;
 }
 
-@media (max-width: 428) {
+@media (max-width: 428) {}
 
-}
+@media (max-width: 1024) {}
 
-@media (max-width: 1024) {
+@media (max-width: 1728) {}
 
-}
-
-@media (max-width: 1728) {
-
-}
-
-body{
+body {
     background-color: var(--cor-de-fundo);
     font-family: var(--Fonte-padrao);
     font-size: 16px;
     font-weight: 400;
 }
-
