--- a/styles/banner.css
+++ b/styles/banner.css
@@ -16,5 +16,20 @@
 }
 
 .banner__pesquisa {
+    background-color: transparent;
+    border: 1px solid var(--cor-branco);
+    border-radius: 24px;
+    width: 100%;
+    color: var(--cor-branco);
+    padding: 1em;
+}
 
+.banner__pesquisa::placeholder{
+    font-family: var(--fonte-padrao);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--cor-branco);
+    background: url('../img/Pesquisa.svg') no-repeat;
+    background-position: 1em;
 }
