--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -22,3 +22,62 @@
     position: initial;
     margin: .5em 0;
 }
+
+.card {
+    background: var(--cor-branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em ;
+}
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: .5em;
+}
+
+.descricao__titulo {
+    color: var(--cor-titulo);
+    font-weight: 700;
+}
+
+.descricao__subtitulo {
+    color: var(--cor-subtitulo);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+}
+
+.descricao__texto {
+    color: var(--cor-texto);
+    font-size: 14px;
+    padding-right: 1em;
+}
+
+.descricao__imagem {
+    margin-bottom: .5em;
+}
+
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes__item {
+    margin: 0 .5em; 
+}
+
+.botoes__link {
+    padding:  1em 2.3em;
+    text-align: center;
+    text-decoration: none;
+    background-color: var(--cor-titulo);
+    color: var(--cor-branco);
+    font-weight: 700;
+}
