--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap');
 @import url('./header.css');
 @import url('./banner.css');
 @import url('./carrossel.css');
@@ -13,15 +13,11 @@
     --cor-subtitulo: #002F52;
     --cor-branco: #FFFFFF;
     --cor-alternativo: #C4C4C4;
-    --Fonte-padrao: 'Poppins', sans-serif;
     --cor-texto: rgba(0, 0, 0, 0.85);
+    --cor-preta: black;
+    --Fonte-padrao: 'Poppins', sans-serif;
+    --fonte-josefin: 'Josefin Sans', sans-serif;
 }
-
-@media (max-width: 428) {}
-
-@media (max-width: 1024) {}
-
-@media (max-width: 1728) {}
 
 body {
     background-color: var(--cor-de-fundo);
