--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -26,7 +26,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
-    padding: 1em ;
+    padding: 1em;
 }
 
 .card__descricao {
@@ -68,14 +68,40 @@
 }
 
 .botoes__item {
-    margin: 0 .5em; 
+    margin: 0 .5em;
 }
 
 .botoes__link {
-    padding:  1em 2.3em;
+    padding: 1em 2.3em;
     text-align: center;
     text-decoration: none;
     background-color: var(--cor-titulo);
     color: var(--cor-branco);
     font-weight: 700;
+}
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card{
+        width: 40vw;
+        margin: 2em auto;
+    }
 }
