--- a/styles/novidades.css
+++ b/styles/novidades.css
@@ -38,3 +38,29 @@
     background-position: 1em;
     padding-left: 3.5em;
 }
+
+@media screen and (min-width:1024px){
+    .novidades{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .novidades__titulo {
+        font-size: 24px;
+        font-weight: 500;
+    }
+
+    .novidades__texto {
+        font-weight: 300;
+    }
+
+    .novidades__descricao{
+        margin: 0 5em;
+        width: 30%;
+    }
+
+    .novidades__email {
+        width: 30%;
+    }
+}
