--- a/styles/banner.css
+++ b/styles/banner.css
@@ -47,3 +47,18 @@
         background-position: 7em;
     }
 }
+
+@media screen and (min-width: 1400px){
+    .banner__pesquisa {
+        width: 30%;
+        
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 15%;
+    }
+
+    .banner{
+        padding: 5em 0;
+    }
+}
