--- a/styles/novidades.css
+++ b/styles/novidades.css
@@ -1,4 +1,4 @@
-.novidades{
+.novidades {
     background-color: var(--cor-branco);
     padding: 1em;
 }
@@ -9,8 +9,9 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    
+
 }
+
 .novidades__titulo {
     font-size: 18px;
     font-weight: 500;
@@ -18,7 +19,7 @@
 
 .novidades__texto {
     font-weight: 300;
-    margin: 1em 0 ;
+    margin: 1em 0;
 }
 
 .novidades__email {
@@ -30,7 +31,7 @@
     width: 90%;
 }
 
-.novidades__email::placeholder{
+.novidades__email::placeholder {
     font-family: var(--fonte-padrao);
     font-weight: 400;
     color: var(--cor-subtitulo);
@@ -39,8 +40,8 @@
     padding-left: 3.5em;
 }
 
-@media screen and (min-width:1024px){
-    .novidades{
+@media screen and (min-width:1024px) {
+    .novidades {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,7 +56,7 @@
         font-weight: 300;
     }
 
-    .novidades__descricao{
+    .novidades__descricao {
         margin: 0 5em;
         width: 30%;
     }
@@ -63,4 +64,15 @@
     .novidades__email {
         width: 30%;
     }
+}
+
+@media screen and (min-width: 1400px) {
+    .novidades__descricao{
+        width: 30%;
+        margin: 3em 1em;
+    }
+    .novidades__email {
+        width: 20%;
+    }
+
 }
