--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -43,3 +43,14 @@ hr {
         margin-left: .5em;
     }
 }
+
+@media screen and (min-width: 1400px){
+    .lista-rodape{
+        border-left: 1px solid var(--cor-cinza);
+        padding-left: 1em;
+    }
+
+    .rodape{
+        padding: 3em 0;
+    }
+}
