--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -44,3 +44,13 @@
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1400px){
+    .topicos__titulo{
+        font-size: 32px;
+    }
+
+    .topicos__lista{
+        margin: 2em 20em 5em 20em;
+    }
+}
